# rust-playground

./: .gitignore  README.md
book/: notes.md
book/ch02-guessing-game/: Cargo.toml
book/ch02-guessing-game/src/: main.rs
book/ch03-fibonacci/: Cargo.toml
book/ch03-fibonacci/src/: main.rs
book/ch08-mean-median-mode/: Cargo.toml
book/ch08-mean-median-mode/src/: main.rs
book/ch08-pig-latin/: Cargo.toml
book/ch08-pig-latin/src/: main.rs
book/ch12-grep/: Cargo.toml
book/ch14-art/: Cargo.toml
book/ch15-cons-list/: Cargo.toml
book/ch15-mock-object/: Cargo.toml
book/ch15-weak-ref-tree/: Cargo.toml
book/ch16-concurrency/: Cargo.toml
book/ch17-blog/: Cargo.toml
book/ch17-gui/: Cargo.toml
book/ch19-hello-macro/: Cargo.toml
book/ch19-pancakes/: Cargo.toml
book/ch19-pancakes/src/: main.rs
book/ch20-hello/: Cargo.toml
clair/grrs/: Cargo.toml
cli/grrs/: Cargo.toml
crust/atomics/: Cargo.toml
crust/boks/: Cargo.toml
crust/iterators/: Cargo.toml
crust/orst/: Cargo.toml
crust/panama/: Cargo.toml
crust/pointers/: Cargo.toml
crust/strsplit/: Cargo.toml
crust/strtok/: Cargo.toml
crust/vecmac/: Cargo.toml
learn-wgpu/: .rustfmt.toml  Cargo.toml  build.rs
learn-wgpu/src/: assets.rs  camera.rs  light.wgsl  main.rs  model.rs  shader.wgsl  texture.rs
lrtdw/: make.py
lrtdw/nbody-rs/: Cargo.toml
lrwetmll/lists/: Cargo.toml
nbody-c/: make.py  nbody.c
nbody-rs/: Cargo.toml
nbody-rs/src/: main.rs  make.py  nbody.rs
rusty-journal/: Cargo.toml
rusty-journal/src/: cli.rs  main.rs  tasks.rs
wasm/game-of-life/: Cargo.toml
(+59 files in other folders)
