[package]
resolver = "2"
name = "learn-wgpu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
pollster = "0.2"
bytemuck = { version = "1.7", features = [ "derive" ] }
anyhow = "1.0"
bitflags = "1.3"
tobj = "3.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
